# qtloader

./: .gitignore  CMakeLists.txt
cmake/: QtLoaderConfig.cmake.in  QtLoaderVersion.in
etc/: editor.qt6  terminal.qt  terminal.qt6
src/: main.cpp
src/core/: QLoaderCommandInterface  QLoaderCopyInterface  QLoaderCopyableInterface  QLoaderDataDir  QLoaderDataInterface  QLoaderDir  QLoaderError  QLoaderIconInterface  QLoaderInterface  QLoaderMovableInterface  QLoaderMoveInterface  QLoaderPluginInterface  QLoaderSaveInterface  QLoaderSettings  QLoaderTree  QScopedStorage  qloaderblobarray.cpp  qloaderblobarray.h  qloadercommandinterface.h  qloadercopyableinterface.h  qloadercopyinterface.h  qloaderdata.cpp  qloaderdata.h  qloaderdatablob.cpp  qloaderdatablob.h  qloaderdatadir.cpp  qloaderdatadir.h  qloaderdatainterface.h  qloaderdir.cpp  qloaderdir.h  qloadererror.h  qloadericoninterface.h  qloaderinterface.h  qloadermovableinterface.h  qloadermoveinterface.h  qloaderplugininterface.h  qloadersaveinterface.h  qloadersettings.cpp  qloadersettings.h  qloadersettings_p.cpp  (+16 more)
src/core/commands/: qloaderclear.cpp  qloaderclear.h  qloadercommands.cpp  qloadercommands.h
src/core/shell/: QLoaderShell  qloadercd.cpp  qloadercd.h  qloaderclear.cpp  qloaderclear.h  qloadercommandinterface.h  qloadercommands.h  qloaderexit.cpp  qloaderexit.h  qloadersave.cpp  qloadersave.h  qloadershell.cpp  qloadershell.h  qloadershellcd.cpp  qloadershellcd.h  qloadershellclear.cpp  qloadershellclear.h  qloadershellexit.cpp  qloadershellexit.h  qloadershellsave.cpp  qloadershellsave.h  qloaderterminalinterface.h
src/shell/: QLoaderShell  qloadercd.cpp  qloadercd.h  qloaderclear.cpp  qloaderclear.h  qloadercommands.cpp  qloaderexit.cpp  qloaderexit.h  qloadersave.cpp  qloadersave.h  qloadershell.cpp  qloadershell.h
src/terminal/: qloadercommandline.cpp  qloadercommandline.h  qloaderterminal.cpp  qloaderterminalinterface.h
src/widgets/: QLoaderMarkupEditor  QLoaderTerminal  QLoaderTerminalInterface  qloadericoninterface.h  qloadermarkupeditor.cpp  qloadermarkupeditor.h  qloadershell.cpp  qloadershell.h  qloaderterminal.cpp  qloaderterminal.h
src/widgets/markupcommander/: QLoaderMarkupCommander  qloadermarkupcommander.cpp  qloadermarkupcommander.h
src/widgets/terminal/: qloaderterminal.cpp  qloaderterminal.h
